--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="16dp"
     tools:context=".MainActivity">
 
     <androidx.constraintlayout.widget.Guideline
@@ -29,6 +30,7 @@
         android:layout_height="0dp"
         android:layout_marginTop="16dp"
         android:textSize="20sp"
+        android:background="#f0f0f0"
         app:layout_constraintTop_toBottomOf="@id/intro"
         app:layout_constraintBottom_toTopOf="@id/h_guideline" />
 
@@ -39,17 +41,32 @@
         android:layout_margin = "16dp"
         android:textSize="20sp"
         android:inputType="date"
-        android:background="@android:color/holo_green_light"
+        android:background="@color/colorNotADate"
         app:layout_constraintTop_toBottomOf="@id/h_guideline"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
+        app:layout_constraintRight_toLeftOf="@id/button_reset"/>
+
+    <ImageButton
+        android:id="@+id/button_reset"
+        android:onClick="onClickButtonReset"
+        android:src="@drawable/ic_whatshot"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:padding="8dp"
+        android:background="@android:color/transparent"
+        app:layout_constraintTop_toBottomOf="@id/display"
+        app:layout_constraintBottom_toTopOf="@id/feedback"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toRightOf="@id/date_input"
+        />
 
     <TextView
         android:id="@+id/feedback"
+        android:textSize="20sp"
+        android:background="#f0f0ff"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="16dp"
-        android:textSize="20sp"
         app:layout_constraintTop_toBottomOf="@id/date_input"
         app:layout_constraintBottom_toBottomOf="parent" />
 
